formatting and sidebar additions

--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -76,9 +76,17 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a className="block" href="/blockchain/consensus-protocol">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Consensus Protocol
       </a>
-      <a className="block" href="/blockchain/helium-token">
+      <a className="block" href="/helium-tokens/hnt">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Helium Token
         ($HNT)
+      </a>
+      <a className="block" href="/helium-tokens/iot">
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The IOT Network Token
+        ($IOT)
+      </a>
+      <a className="block" href="/helium-tokens/mobile">
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> The Mobile Network
+        Token ($MOBILE)
       </a>
       <a className="block" href="/blockchain/oracles">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Oracles
