--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -116,7 +116,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a className="block" href="/blockchain/consensus-protocol">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Consensus Protocol
       </a>
-      <a className="block" href="/blockchain/helium-token">
+      <a className="block" href="/helium-tokens/hnt">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Helium Token
       </a>
       <a className="block" href="/blockchain/transaction-fees">
