--- a/docs/lorawan-on-helium/open-lns.mdx
+++ b/docs/lorawan-on-helium/open-lns.mdx
@@ -3,13 +3,12 @@ id: open-lns
 title: Open LNS
 pagination_label: Open LNS
 sidebar_label: Open LNS
-description: Helium Documentation
+description: Helium Open LNS Documentation
 image: https://imgur.com/a/7jGqTV4
 slug: /lorawan-on-helium/open-lns
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
-# Helium Open LNS
 
 The Open LNS initiative allows anyone looking to deploy devices on the Helium Network to use any LoRaWAN Network Server (LNS).
 The LNS you choose must compile with the LoRaWAN specification to access the Helium Network.
