--- a/docs/use-the-network/roaming.mdx
+++ b/docs/use-the-network/roaming.mdx
@@ -8,7 +8,7 @@ image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/roaming
 ---
 
-# Helium Roaming Services
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Helium Roaming Services enables public and private LoRaWAN network providers around the world to
 leverage Helium’s ubiquitous coverage.
@@ -88,7 +88,7 @@ and hit **Transfer DC to Org**. On the pop up, enter the quantity of Data Credit
 receiving Organization. Click **Make Transfer**.
 
 Further reading: how Data Credits fit into Helium Tokenomics
-[here](https://docs.helium.com/blockchain/helium-token/#data-credits-and-burn-and-mint-economics).
+[here](/helium-tokens/hnt/#data-credits-and-burn-and-mint-economics).
 
 ## Configurations
 
