--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -1,11 +1,11 @@
 ---
-id: HNT
-title: HNT
-pagination_label: HNT
-sidebar_label: HNT
-description: HNT
+id: hnt-token
+title: The Helium Network Token
+pagination_label: HNT Token
+sidebar_label: HNT Token
+description: Helium Network Token Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /blockchain/helium-tokens/HNT
+slug: /helium-tokens/hnt
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
