--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -1,11 +1,11 @@
 ---
-id: IOT
-title: IOT
-pagination_label: IOT
-sidebar_label: IOT
-description: IOT
-image: 
-slug: /blockchain/helium-tokens/IOT
+id: iot-token
+title: The Helium IOT Network Token
+pagination_label: IOT Token
+sidebar_label: 🚧 IOT Token 🚧
+description: Helium IOT Network Token Documentation
+image: https://i.imgur.com/bWAbESE.png
+slug: /helium-tokens/iot
 ---
 
 import useBayseUrl from '@docusaurus/useBaseUrl'
