--- a/docs/solana/compression-nfts.mdx
+++ b/docs/solana/compression-nfts.mdx
@@ -4,8 +4,8 @@ title: Compression NFTs
 pagination_label: Compression NFTs
 sidebar_label: Compression NFTs
 description: Helium Compression NFTs Documentation
-image: 
-slug: /solana/migration/compression-nfts
+image: https://i.imgur.com/bWAbESE.png
+slug: /solana/compression-nfts
 ---
 
 import useBayseUrl from '@docusaurus/useBaseUrl'
@@ -15,4 +15,3 @@ import useBayseUrl from '@docusaurus/useBaseUrl'
 The documentation on Solana and the upcoming Migration is under development and subject to change.
 
 :::
-
