--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -1,11 +1,11 @@
 ---
-id: MOBILE
-title: MOBILE
-pagination_label: MOBILE
-sidebar_label: MOBILE
-description: MOBILE
-image: 
-slug: /blockchain/helium-tokens/MOBILE
+id: mobile-token
+title: The Helium MOBILE Network Token
+pagination_label: MOBILE Token
+sidebar_label: 🚧 MOBILE Token 🚧
+description: Helium MOBILE Network Token Documentation
+image: https://i.imgur.com/bWAbESE.png
+slug: /helium-tokens/mobile
 ---
 
 import useBayseUrl from '@docusaurus/useBaseUrl'
