--- a/docs/api/home.mdx
+++ b/docs/api/home.mdx
@@ -10,10 +10,10 @@ slug: /api
 
 The Helium Network currently exposes the following APIs:
 
-- [Blockchain API](/api/blockchain/introduction) - Access real-time and historical data from the
-  helium blockchain.
 - [Console API](/api/console) - Provides programatic access to your organization's sensor data on
   Helium console instances.
+
+All other data can be accessed through [Oracles] (https://docs.helium.com/oracles/)
 
   Note: the free to use Foundation Console [console.helium.com](https://console.helium.com) does not
   support the Console API.
