add info about oracles

--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -24,3 +24,14 @@ As such, this migration introduces several Oracles which serve as bridges betwee
 and the blockchain. These infrastructure changes will allow the Helium Network to effectively
 introduce new Networks as Decentralized Network Protocol (DNP) subDAOs and more easily scale
 existing DNP subDAOs by removing existing bottlenecks.
+
+With the deprecation of the Helium L1, changes to [API] (https://docs.helium.com/api/) and [ETL] (https://github.com/helium/blockchain-etl) include:
+1. Existing ETL codebase: will no longer sync blocks.
+2. Existing API codebase: will no longer serve new data.
+3. api.helium.io (built on top of existing etl and api): will stay serving old data.
+4. explorer.helium.com (built on top of api.helium.io and other apis): will have data from the old chain and be migrated to old-explorer.helium.com.
+
+What is new includes:
+5. New datasets are available and will continue to be available on [AWS S3] (https://docs.helium.com/oracles/oracle-data)
+6. Sample API code has been published [here] ().
+7. Third parties are working on new APIs and services to replace existing tools (Hotspotty, Heliumgeek, Relay, etc.). 
