--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -23,7 +23,7 @@ Helium is moving to the Solana blockchain.
 ## Major Milestones
 
 - Available on Solana DevNet for testing [Deployed]
-- Smart Contract Audit [Ongoing]
+- Smart Contract Audit [Finished]
 - MainNet Launch [Soon™]
 
 ### Migration Process Steps
