update with link
this is matthew's suggestion

--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -33,5 +33,5 @@ With the deprecation of the Helium L1, changes to [API] (https://docs.helium.com
 
 What is new includes:
 5. New datasets are available and will continue to be available on [AWS S3] (https://docs.helium.com/oracles/oracle-data)
-6. Sample API code has been published [here] ().
+6. Sample API code has been published [here] (https://github.com/dewi-alliance/oracle-observer-sample).
 7. Third parties are working on new APIs and services to replace existing tools (Hotspotty, Heliumgeek, Relay, etc.). 
