--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -6,13 +6,14 @@ sidebar_label: Introduction
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/introduction
+hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Blockchain API [DEPRECATED]
 
-:::warning Depreciation Incoming
+:::warning Deprecation Incoming
 
 With the Solana Migration, these API endpoints will no longer be available.
 
@@ -35,7 +36,7 @@ through two endpoints.
   get dropped.
 - **https://api.helium.io** — Stable, scalable production service. Connected to mainnet.
 
-### Specify a User-Agent [DEPRECATED]
+### Specify a User-Agent
 
 To access the helium api via script you will need to specify a valid `User-Agent` HTTP header field
 identifying your agent, all requests made without a `User-Agent` header will result in an error
