--- a/docs/api/blockchain/dc-burns.mdx
+++ b/docs/api/blockchain/dc-burns.mdx
@@ -6,13 +6,14 @@ sidebar_label: DC Burns
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/dc-burns
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-:::warning Depreciation Incoming
+:::warning Deprecation Incoming
 
 With the Solana Migration, these API endpoints will no longer be available.
 
