updated caution admonitions for tokens

--- a/docs/blockchain/mining.mdx
+++ b/docs/blockchain/mining.mdx
@@ -20,8 +20,10 @@ reward basics.
 ## How Do Hotspots Earn Helium Tokens?
 
 The Helium blockchain rewards Hotspots for providing wireless coverage and verifying the Helium
-Network. Hotspots are rewarded in Helium Token, HNT. After the Solana Migration, all LoRaWAN Hotspots will mine IOT, and HNT will continue to be mined into the DAO Treasury. 
-IOT Holders will be able to redeem their IOT for HNT equivalently, per the redemption ratio. The redemption ratio is set at the time of subDAO Treasury creation.
+Network. Hotspots are rewarded in Helium Token, HNT. After the Solana Migration, all LoRaWAN
+Hotspots will mine IOT, and HNT will continue to be mined into the DAO Treasury. IOT Holders will be
+able to redeem their IOT for HNT equivalently, per the redemption ratio. The redemption ratio is set
+at the time of subDAO Treasury creation.
 
 Every epoch, the current consensus group mines approximately 30 blocks on the blockchain. In each
 block, Hotspots perform various types of work and are awarded according to the following
