--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -11,7 +11,7 @@ hide_table_of_contents: true
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-:::warning Depreciation Incoming
+:::warning Deprecation Incoming
 
 With the Solana Migration, these API endpoints will no longer be available.
 
