--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -12,6 +12,7 @@ import useBayseUrl from '@docusaurus/useBaseUrl'
 
 :::warning 🚧 This document is a work in progress. 🚧
 
-The documentation on Solana and the upcoming Migration is under development and subject to change.
+The documentation on subDAO Tokens and the upcoming Migration is under development and subject to
+change.
 
 :::
