token references and formatting fixes

--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -216,14 +216,18 @@ await program.methods
     })
     .rpc();
 ```
+
 ## RPC & RPC Nodes
 
-An RPC is an application's gateway to the Solana cluster. RPC Nodes do not participate in consensus and instead are dedicated to data requests.
+An RPC is an application's gateway to the Solana cluster. RPC Nodes do not participate in consensus
+and instead are dedicated to data requests.
 
-All of the RPCs used in the Solana Migration follow the Solana chain and will index the NFT data that Core Developers created in Compression NFTs.
-This is one reason the Helium Network is able to mint a million or more NFTs on Solana. 
+All of the RPCs used in the Solana Migration follow the Solana chain and will index the NFT data
+that Core Developers created in Compression NFTs. This is one reason the Helium Network is able to
+mint a million or more NFTs on Solana.
 
-You may need to run an RPC service to access public Solana clusters. Many services are free and others are paid. 
-The Foundation uses Helius as their RPC Provider, and it’s useful to use a PRC provider that is familiar with compression. They will all support this at some point.
+You may need to run an RPC service to access public Solana clusters. Many services are free and
+others are paid. The Foundation uses Helius as their RPC Provider, and it’s useful to use a PRC
+provider that is familiar with compression. They will all support this at some point.
 
 You can read more about RPC & RPC Nodes [here] (https://solana.com/rpc).
