--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -29,28 +29,29 @@ the [Helium Program Libraries](https://github.com/helium/helium-program-library)
 
 ### AWS S3 Buckets
 
-Data is directly accessible from the `foundation-poc-data-requester-pays` bucket in AWS `us-west-2` 
-under the top level data category prefixes listed below. All data provided in the S3 bucket is 
-made available on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data 
-transfer and API costs incurred from the data requests. For more information on accessing data from 
-a requester pays bucket, refer to [Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
+Data is directly accessible from the `foundation-poc-data-requester-pays` bucket in AWS `us-west-2`
+under the top level data category prefixes listed below. All data provided in the S3 bucket is made
+available on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data transfer
+and API costs incurred from the data requests. For more information on accessing data from a
+requester pays bucket, refer to
+[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
 
-   | Top Level Data Category Prefixes |
-   | -------------------------------- |
-   | `foundation-iot-entropy`         |
-   | `foundation-iot-ingest`          |
-   | `foundation-iot-packet-ingest`   |
-   | `foundation-iot-packet-verifier` |
-   | `foundation-iot-verified-rewards`|
-   | `foundation-mobile-ingest`       |
-   | `foundation-mobile-verified`     |
+| Top Level Data Category Prefixes  |
+| --------------------------------- |
+| `foundation-iot-entropy`          |
+| `foundation-iot-ingest`           |
+| `foundation-iot-packet-ingest`    |
+| `foundation-iot-packet-verifier`  |
+| `foundation-iot-verified-rewards` |
+| `foundation-mobile-ingest`        |
+| `foundation-mobile-verified`      |
 
-Under each top level data category prefix, the relating PoC data files are provided in a flattened 
+Under each top level data category prefix, the relating PoC data files are provided in a flattened
 structure in the format provided below:
 
 `s3://foundation-poc-data-requester-pays/<top-level-data-category-prefix>/<filename>.gz`
 
-Again, as the `foundation-poc-data-requester-pays` bucket is 'Requestor Pays', you should be mindful 
+Again, as the `foundation-poc-data-requester-pays` bucket is 'Requestor Pays', you should be mindful
 that AWS will charge you for:
 
 1. Storage costs on any destination buckets
@@ -60,46 +61,46 @@ that AWS will charge you for:
 To that end, keeping data in `us-west-2` and being pragmatic about which AWS S3 access patterns you
 use will greatly reduce your cost burden for accessing the PoC data.
 
-In regard to access patterns, one approach that you can take to minimize the quantity of S3 API 
-calls over time - and save money - is to use the `aws s3api list-objects-v2` command and specify
-the `--start-after` parameter with the filename of the last file you received, as indicated below:
+In regard to access patterns, one approach that you can take to minimize the quantity of S3 API
+calls over time - and save money - is to use the `aws s3api list-objects-v2` command and specify the
+`--start-after` parameter with the filename of the last file you received, as indicated below:
 
 ```bash
 aws s3api list-objects-v2 --bucket foundation-poc-data-requester-pays --prefix <top-level-data-category-prefix> --start-after <filename> --request-payer requester
 ```
 
-For example, if you were to execute the `aws s3api list-objects-v2` command and the last / most 
-recent file you received was `example.gz`, in a subsequent call to `aws s3api list-objects-v2` you 
-could add the `--start-after example.gz` flag to return a list of files subsequent to `example.gz`. 
-In doing so, your total API calls in the second invocation of `aws s3api list-objects-v2` would be 
+For example, if you were to execute the `aws s3api list-objects-v2` command and the last / most
+recent file you received was `example.gz`, in a subsequent call to `aws s3api list-objects-v2` you
+could add the `--start-after example.gz` flag to return a list of files subsequent to `example.gz`.
+In doing so, your total API calls in the second invocation of `aws s3api list-objects-v2` would be
 limited to only the files subsequent to `example.gz`, rather than for all files in the bucket. From
-there, you can iterate over the returned list of files and perform additional S3 API commands such 
+there, you can iterate over the returned list of files and perform additional S3 API commands such
 as `aws s3api copy-object` to copy files based on the file list.
 
 The raw PoC data stored in the `foundation-poc-data-requester-pays` bucket is in encoded protobuf
-format in gz compressed files. The table below provides the top level data category prefixes, the 
-file types comprised within each data category prefix, the filename pattern for each file type, and 
+format in gz compressed files. The table below provides the top level data category prefixes, the
+file types comprised within each data category prefix, the filename pattern for each file type, and
 provides a link to the corresponding protobuf used to decode the data.
 
-| Category | File Type | Pattern | Protobuf |
-| :--- | :--- | :-- | :-- |
-| foundation-iot-entropy | Entropy | entropy.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5) |
-| foundation-iot-ingest | IotBeaconIngestReport | iot_beacon_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83) |
-| foundation-iot-ingest | IotWitnessIngestReport | iot_witness_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90) |
-| foundation-iot-packet-ingest | Coming soon |
-| foundation-iot-packet-verifier | Coming soon |
-| foundation-iot-verified-rewards | IotPoc | iot_poc.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162) |
-| foundation-iot-verified-rewards | IotInvalidBeaconReport | iot_invalid_beacon.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125) |
-| foundation-iot-verified-rewards | IotInvalidWitnessReport | iot_invalid_witness.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133) |
-| foundation-iot-verified-rewards | GatewayRewardShare | gateway_reward_share.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L171) |
-| foundation-iot-verified-rewards| RewardManifest | reward_manifest.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5) |
-| foundation-mobile-ingest | CellHeartbeatIngestReport | heartbeat_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L50) |
-| foundation-mobile-ingest | CellSpeedtestIngestReport | speedtest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L25) |
-| foundation-mobile-ingest | DataTransferSessionIngestReport | data_transfer_session_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L177) |
-| foundation-mobile-verified | ValidatedHeartbeat | validated_heartbeat.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80) |
-| foundation-mobile-verified | SpeedtestAvg | speedtest_avg.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97) | 
-| foundation-mobile-verified | RadioRewardShare | radio_reward_share.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118) |
-| foundation-mobile-verified | RewardManifest | reward_manifest.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5) |
+| Category                        | File Type                       | Pattern                                | Protobuf                                                                                                                 |
+| :------------------------------ | :------------------------------ | :------------------------------------- | :----------------------------------------------------------------------------------------------------------------------- |
+| foundation-iot-entropy          | Entropy                         | entropy.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5)              |
+| foundation-iot-ingest           | IotBeaconIngestReport           | iot_beacon_ingest_report.\*            | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83)    |
+| foundation-iot-ingest           | IotWitnessIngestReport          | iot_witness_ingest_report.\*           | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90)    |
+| foundation-iot-packet-ingest    | Coming soon                     |
+| foundation-iot-packet-verifier  | Coming soon                     |
+| foundation-iot-verified-rewards | IotPoc                          | iot_poc.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162)   |
+| foundation-iot-verified-rewards | IotInvalidBeaconReport          | iot_invalid_beacon.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125)   |
+| foundation-iot-verified-rewards | IotInvalidWitnessReport         | iot_invalid_witness.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133)   |
+| foundation-iot-verified-rewards | GatewayRewardShare              | gateway_reward_share.\*                | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L171)   |
+| foundation-iot-verified-rewards | RewardManifest                  | reward_manifest.\*                     | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)      |
+| foundation-mobile-ingest        | CellHeartbeatIngestReport       | heartbeat_report.\*                    | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L50)  |
+| foundation-mobile-ingest        | CellSpeedtestIngestReport       | speedtest_report.\*                    | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L25)  |
+| foundation-mobile-ingest        | DataTransferSessionIngestReport | data_transfer_session_ingest_report.\* | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L177) |
+| foundation-mobile-verified      | ValidatedHeartbeat              | validated_heartbeat.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80)  |
+| foundation-mobile-verified      | SpeedtestAvg                    | speedtest_avg.\*                       | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97)  |
+| foundation-mobile-verified      | RadioRewardShare                | radio_reward_share.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118) |
+| foundation-mobile-verified      | RewardManifest                  | reward_manifest.\*                     | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)      |
 
 ### Arweave
 
